<resources>
    <string name="app_name">Speak_weake</string>
    <string name="weclome">基于语音识别与合成的老人陪护系统</string>
    <string name="weclome_start">开启您的时刻</string>
    <string name="denglu">系统登陆界面</string>
    <string name="denglu1">登陆</string>
    <string name="zhuce">系统注册界面</string>
    <string name="zhuce1">注册</string>
    <string name="number">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="repassword">请再次输入密码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
